local-k8s/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: differ
  annotations:
    tilt.dev/down-policy: keep
---
